2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-setup-buffer): Refresh the summary buffer
	name if we're using a single article buffer.  Otherwise, it may point
	to a killed buffer (bug#13756).

2014-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-split-it): Instead of redoing the search to restore
	the match data, just save and restore it explictly (bug#12375).

	* gnus-sum.el (gnus-summary-read-group-1): Initialize the spam code if
	that's needed.

	* spam.el (spam-initialize): Allow calling repeatedly, but only run the
	the code once (bug#9069).

2014-01-18  Steinar Bang  <sb@dod.no>

	* gnus-setup.el (gnus-use-sendmail): We never use sendmail for mail
	reading.

2014-01-09  Ken Olum  <kdo@cosmos.phy.tufts.edu>  (tiny change)

	* message.el (message-bury): Call bury-buffer with no argument
	in the message-return-action case too.

2014-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-article-stop-animations): Declare it before using.
	(nnimap-split-fancy, nnimap-split-methods): Declare.

	* mm-util.el (help-function-arglist): Declare.

2013-12-28  Glenn Morris  <rgm@gnu.org>

	* gnus-sieve.el (gnus-sieve-select-method):
	* gravatar.el (gravatar-automatic-caching, gravatar-cache-ttl)
	(gravatar-rating, gravatar-size):
	* message.el (message-minibuffer-local-map):
	* sieve-manage.el (sieve-manage-authenticators)
	(sieve-manage-authenticator-alist): Specify custom types.

	* hashcash.el (hashcash-program): Rename from hashcash-path.
	Update callers.

	* gnus-icalendar.el (gnus-icalendar-org, gnus-icalendar):
	* gnus-sum.el (gnus-subthread-sort-functions): Add version.
	* gnus-sync.el (gnus-sync-file-encrypt-to): Add type and version.

	* auth-source.el (auth-sources):
	* nnmairix.el (nnmairix-propagate-marks-upon-close):
	Fix custom types.

	* tls.el (tls-certtool-program): Fix default value.

2013-12-26  Lars Ingebrigtsen  <larsi@gnus.org>
