@@ -1,3 +1,8 @@
+2014-01-31  Dave Abrahams  <dave@boostpro.com>
+
+	* gnus-salt.el (gnus-tree-highlight-article): Don't move point around
+	in the summary buffer (bug#13769).
+
 2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-art.el (gnus-article-setup-buffer): Refresh the summary buffer
